doLog and repository.log accepts "limit" parameter.